--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -1,1 +1,12 @@
+plugin: aws_ec2
+regions:
+  - us-east-1
+filters:
+  tag:Project: my-web-app
+  instance-state-name: running
+keyed_groups:
+  - key: tags.Name
+    prefix: instance
+hostnames:
+  - public-ip-address
 
